@@ -115,6 +115,7 @@ Localization
         #LOC_BDArmory_Settings_GMSettingsToggle = GM Settings
         #LOC_BDArmory_Settings_DebugSettingsToggle = Debugging
         #LOC_BDArmory_Settings_AIToolbarButton = AI Toolbar Button
+        #LOC_BDArmory_Settings_VMToolbarButton = VM Toolbar Button
         #LOC_BDArmory_Settings_Instakill = Instakill
         #LOC_BDArmory_Settings_InfiniteAmmo = Infinite Ammo
         #LOC_BDArmory_Settings_InfiniteMissiles = Infinite Ordinance
